<resources>
    <string name="app_name">Movie dB</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_movie">Title Movie</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!--&lt;!&ndash; Example General settings &ndash;&gt;-->
    <!--<string name="pref_header_general">General</string>-->

    <!--<string name="pref_title_social_recommendations">Enable social recommendations</string>-->
    <!--<string name="pref_description_social_recommendations">Recommendations for people to contact-->
    <!--based on your message history-->
    <!--</string>-->

    <!--<string name="pref_title_display_name">Display name</string>-->
    <!--<string name="pref_default_display_name">John Smith</string>-->

    <!--<string name="pref_title_add_friends_to_messages">Add friends to messages</string>-->
    <!--<string-array name="pref_example_list_titles">-->
    <!--<item>Always</item>-->
    <!--<item>When possible</item>-->
    <!--<item>Never</item>-->
    <!--</string-array>-->
    <!--<string-array name="pref_example_list_values">-->
    <!--<item>1</item>-->
    <!--<item>0</item>-->
    <!--<item>-1</item>-->
    <!--</string-array>-->

    <!--&lt;!&ndash; Example settings for Data & Sync &ndash;&gt;-->
    <!--<string name="pref_header_data_sync">Data &amp; sync</string>-->

    <!--<string name="pref_title_sync_frequency">Sync frequency</string>-->
    <!--<string-array name="pref_sync_frequency_titles">-->
    <!--<item>15 minutes</item>-->
    <!--<item>30 minutes</item>-->
    <!--<item>1 hour</item>-->
    <!--<item>3 hours</item>-->
    <!--<item>6 hours</item>-->
    <!--<item>Never</item>-->
    <!--</string-array>-->
    <!--<string-array name="pref_sync_frequency_values">-->
    <!--<item>15</item>-->
    <!--<item>30</item>-->
    <!--<item>60</item>-->
    <!--<item>180</item>-->
    <!--<item>360</item>-->
    <!--<item>-1</item>-->
    <!--</string-array>-->

    <!--<string-array name="list_preference_entries">-->
    <!--<item>Entry 1</item>-->
    <!--<item>Entry 2</item>-->
    <!--<item>Entry 3</item>-->
    <!--</string-array>-->

    <!--<string-array name="list_preference_entry_values">-->
    <!--<item>1</item>-->
    <!--<item>2</item>-->
    <!--<item>3</item>-->
    <!--</string-array>-->

    <!--<string-array name="multi_select_list_preference_default_value" />-->

    <!--<string name="pref_title_system_sync_settings">System sync settings</string>-->

    <!--&lt;!&ndash; Example settings for Notifications &ndash;&gt;-->
    <!--<string name="pref_header_notifications">Notifications</string>-->

    <!--<string name="pref_title_new_message_notifications">New message notifications</string>-->

    <!--<string name="pref_title_ringtone">Ringtone</string>-->
    <!--<string name="pref_ringtone_silent">Silent</string>-->

    <!--<string name="pref_title_vibrate">Vibrate</string>-->
    <string name="text_reminder">text Reminder</string>
    <string name="now_playing">Now Playing</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="movie_notification_setting">Movie Notification</string>
    <string name="upcoming">Upcoming</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="notification">Notification</string>
    <string name="locale_language">Locale Language</string>
    <string name="favorite">favorite</string>
    <string name="appwidget_text">Favorite Movie</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">NO DATA</string>

</resources>
